Changelog
=========

0.13 (unreleased)
-----------------

- Nothing changed yet.


0.12 (2015-02-06)
-----------------

- Fix ids on viewlet managers in folder listing template.
  [cedricmessiant]

- Allow to modify the pagesize with a query-string e.g. "?pagesize=100".
  (fixes plone.app.content >= 2.1.5 compatibility).
  [cedricmessiant]


0.11 (2013-09-25)
-----------------

WARNING ! : Adapters for additional columns, listing options and listing rights
		    MUST BE UPDATED !

- Additional columns multiadapter now handles view.

- Additional column can display html.

- Reload instead of redirect after edit / delete popup
  to ensure we stay on the same page.

- Sort urls are aware of parameters and template.

- We use a multi adapter for listing options and rights instead of a view
  so that we can make listing options depend on the view.


0.10 (2013-07-16)
-----------------

- To show edit popup, test the fact any workflow action is available
  instead of just testing Review portal content right.

- Fix: check global copy right to show copy button.

- All cells have a class. Avoid wrap in modified cell.

- Do not show upload viewlet if there is no addable type that matches
  with a file content type set up in content types registry.

- Generate scales when we add images in and edm listing.
  [thomasdesvenain]


0.9 (2013-03-20)
----------------

- Plone 4.3 compatible.


0.8 (2013-02-15)
----------------

- Class that gets folder contents and renders a table is a multi adapter
  on context and request.
  [thomasdesvenain]

- German translation.
  [thomasdesvenain]


0.7 (2012-11-06)
----------------

- Added a column to quick view images in an overlay.
  [thomasdesvenain]


0.6 (2012-09-10)
----------------

- Do not display state column in folders where all contents have no workflow.
  [thomasdesvenain]


0.5 (2012-08-29)
----------------

- If we have a sortable_size index, we can sort by size.
  [thomasdesvenain]

- We can sort by review state.